--- a/history.html
+++ b/history.html
@@ -21,7 +21,7 @@
         <h2>Early 1700s</h2>
       </div>
     </div>
-    <div class="contentLine history">
+    <div class="contentLine history rev">
       <div class="contentText contentLeft">
         <p>In the early 1700s, there was one place that was famous for its sign language use: Martha's Vineyard, Massachusetts. The island had a large Deaf population; therefore, sign language was very common. Everyone used it, including hearing people. The sign language used was called Martha's Vineyard Sign Language, or MVSL, which is categoried as a village sign language.</p>
       </div>
@@ -34,7 +34,7 @@
         <h2>Early 1800s</h2>
       </div>
     </div>
-    <div class="contentLine history">
+    <div class="contentLine history norm">
       <div class="contentText contentLeft">
         <img src="asd.jpeg" alt="American School for the Deaf">
       </div>
